# ipotcas

./: .clangd  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Makefile  README.md  STM32F767XX_FLASH.ld  compile_commands.json  flash_rx.sh  flash_tx.sh  gen_table.py  ipotcas2 Debug (1).launch  ipotcas2 Debug RX.launch  ipotcas2 Debug TX.launch  ipotcas2 Debug.launch  ipotcas2.ioc  post_gen.sh  pre_gen.sh  record.py  stream.py
Core/Inc/: codec.h  ethernet.h  fast_math.h  fixed.h  hamming.h  main.h  modulation.h  network.h  receive.h  rs.h  scrambler.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  transmit.h  tusb_config.h
Core/Src/: codec.c  ethernet.c  main.c  network.c  receive.c  rs.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  transmit.c  usb_descriptors.c
cmake/stm32cubemx/: CMakeLists.txt
pcb/ipotcas/: .gitignore  format_bom.py  fp-lib-table  ipotcas.kicad_pcb  ipotcas.kicad_pro  ipotcas.kicad_sch  sym-lib-table
pcb/ipotcas/Custom/: Custom.kicad_sym
pcb/ipotcas/Custom/282837_2/: TE_282837-2.kicad_mod
pcb/ipotcas/Custom/PJ-002B/: CUI_PJ-002B.kicad_mod
plotting/: codec.py  do_fft.py  foo.py  hamming.py  plot.py  plotutil.py  power_plot.py  stream.py
rustplot/: Cargo.toml  main.py  pyproject.toml
rustplot/src/: codec.rs  hamming.rs  lib.rs
